2006-06-13  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/uuid.c (CLSID_FileProtocol, CLSID_FtpProtocol, CLSID_GopherProtocol,
	CLSID_HttpProtocol, CLSID_HttpSProtocol, CLSID_MkProtocol,
	CLSID_PSUrlMonProxy, CLSID_StdURLMoniker): Remove.  Moved to
	extras-uuid.c.
	* lib/extras-uuid.c (CLSID_FileProtocol, CLSID_FtpProtocol, CLSID_GopherProtocol,
	CLSID_HttpProtocol, CLSID_HttpSProtocol, CLSID_MkProtocol,
	CLSID_PSUrlMonProxy, CLSID_StdURLMoniker): Added.
	* lib/hlguids-uuid.c: State source of CLSIDs.

2006-06-13  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Added extras-uuid as an object and source.
	* lib/uuid.c (IID_IClientSiteHandler, IID_IContinue, IID_IHttpNegotiate,
	IID_IPersistMoniker, IID_IServerHandler, IID_ITargetEmbedding,
	IID_ITargetFrame, IID_ITypeComp, IID_IUrlHistoryStg, IID_IWinInetHttpInfo,
	IID_IWinInetInfo, IID_IEnumSTATPROPSETSTG, IID_IEnumSTATPROPSTG,
	IID_IEnumSTATURL): Remove.  Moved to extras-uuid.c.
	* lib/extras-uuid.c: New file.
	Thank you to Julien Lecomte (julienlecomte at users dot sourceforge dot
	net).

2006-06-12  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1424461]
	*include/imagehlp.h: Comment out IN, OUT and OPTIONAL,
	throughout.
	*include/rpcdce.h: Don't define IN, OUT or OPTIONAL if
	_NO_W32_PSEUDO_MODIFIERS.
	*include/rpcnsi.h: Comment out IN, OUT and OPTIONAL,
	throughout.
	*include/rpcnsip.h: Likewise.
	*include/windef.h: Don't define IN, OUT or OPTIONAL
	if _NO_W32_PSEUDO_MODIFIERS.
	*include/ddk/batclass.h: Comment out IN, OUT and OPTIONAL,
	throughout.
	*include/ddk/cfgmgr32.h: Likewise.
	*include/ddk/ddkmapi.h: Likewise.
	*include/ddk/hidclass.h: Likewise.
	*include/ddk/hidpi.h: Likewise.
	*include/ddk/kbdmou.h: Likewise.
	*include/ddk/mcd.h: Likewise.
	*include/ddk/miniport.h: Likewise.
	*include/ddk/minitape.h: Likewise.
	*include/ddk/ndis.h: Likewise.
	*include/ddk/ndistapi.h: Likewise.
	*include/ddk/ndiswan.h: Likewise.
	*include/ddk/ntapi.h: Likewise.